style.css
html {
  font-size: 10px;
  background: url('./background.jpg') bottom center;
  background-size: cover;
}

div {
  align-content: center;
}

body,html {
  margin: 0;
  padding: 0;
  font-family: sans-serif;
}

button{
  display: flex;
  justify-content: center;
  align-content: center;
  text-align: center;
  /* margin: auto; */
  height: 15rem;
  width:8em;
  background: rgba(0, 0, 0, 0.541);
}

.keys {
  display: flex;
  /* flex: 1; */
  min-height: 100vh;
  flex-wrap: wrap;
  align-items: center;
  justify-content: center;
  
}

.key {
  border: .4rem solid black;
  border-radius: .5rem;
  margin: 1rem;
  font-size: 1.5rem;
  padding: 1rem .5rem;
  transition: all .07s ease;
  width: 10rem;
  text-align: center;
  color: white;
  background: rgba(0,0,0,0.4);
  text-shadow: 0 0 .5rem black;
}

.playing {
  transform: scale(1.1);
  border-color: #ffc600;
  box-shadow: 0 0 1rem #ffc600;
}

kbd {
  display: block;
  font-size: 4rem;
}

.sound {
  font-size: 1.2rem;
  text-transform: uppercase;
  letter-spacing: .1rem;
  color: #ffc600;
}

@media (max-width: 750px) {

  div{
    align-content: center;
  }

  .keys {
    height: auto;
    justify-content: space-evenly;
    margin-bottom: 0px;
    margin-top: 0px;
  }

  button{
    margin-bottom: 0px;
    margin-top: 0px;
    height: 7em;
  }

  kbd {
    font-size: 0%;
  }
}

